# mulligan

./: Cargo.toml  README.md
src/: fed.rs  iter.rs  lib.rs  types.rs
tests/: fed_balance_sheet.rs
tests/data/: FRB_H41_2006.xml  FRB_H41_2010.xml  FRB_H41_2020.xml
web/: index.html  mulligan.css
