[package]
name = "mulligan"
version = "0.2.0"
authors = ["Jorge Perez Burgos <vaijira@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2"
actix-rt = "1"
actix-web = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.1"
env_logger = "0.7"
lazy_static = "1.4.0"
radix_trie = "0.1.6"
reqwest = { version = "0.11", features = ["json"] }
roxmltree =  "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19", features = ["full"] }
zip = "0.5"
